[tool.poetry]
name = "Moksha_1"
version = "0.0.1"
description = "Institutional-grade Deep Learning Hedge Fund"
authors = ["Your Team <team@moksha.ai>"]
readme = "README.md"
packages = [{include = "Moksha_1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core data science stack - using pandas 1.x for alpaca-py compatibility
numpy = "^1.24.0"
pandas = ">=1.5.0,<2.0.0"
scipy = "^1.10.0"

# Machine learning - using compatible versions
torch = "^2.1.0"
scikit-learn = "^1.3.0"
shap = "^0.44.0"

# Financial data - alpaca-py requires pandas <2.0
alpaca-py = "^0.27.0"
yfinance = "^0.2.0"

# Optimal transport for Wasserstein
pot = "^0.9.0"

# Data storage and caching
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

# API and async
aiohttp = "^3.9.0"
requests = "^2.31.0"
tenacity = "^8.2.0"

# Utilities
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
mypy = "^1.4.0"
ruff = "^0.0.280"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
